--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <body>
     <h1>Hello, world!</h1>
 
+     <p>Welcome to my Website!</p>
+    <p style="font-size:1em ;"> My name is Aadhav Guruswamy. I am 11 years old. I know 5 languages which include English, Spanish, Tamil, and HTMl, and JavaScript. </p>
+    
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
