--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
      <p>Welcome to my Website!</p>
     <p style="font-size:1em ;"> My name is Aadhav Guruswamy. I am 11 years old. I know 5 languages which include English, Spanish, Tamil, and HTMl, and JavaScript. </p>
-<p>The history of my website!</p>
+<p style-"font-size:3em ;"> The History of my website!</p>
     <p style="font-size:1em ;"> First I used a tabular inference </p>
     <ul class="nav nav-tabs" id="myTab" role="tablist">
   <li class="nav-item" role="presentation">
@@ -29,9 +29,9 @@
   </li>
 </ul>
 <div class="tab-content" id="myTabContent">
-  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">...</div>
-  <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
-  <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">Home Of The Page</div>
+  <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">I am 11 Years Old and know 5 luangages!</div>
+  <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab"> My phone number is 248-561-6830</div>
 </div>
     
 
