--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   </li>
 </ul>
 <div class="tab-content" id="myTabContent">
-  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">Home Of The Page</div>
-  <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">I am 11 Years Old and know 5 luangages!</div>
-  <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab"> My phone number is 248-561-6830</div>
+  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">This is some content for the sake of this example</div>
+  <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">This is some content for the sake of this example</div>
+  <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">This is some content for the sake of this example</div>
 </div>
     
 
