--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
      <p>Welcome to my Website!</p>
     <p style="font-size:1em ;"> My name is Aadhav Guruswamy. I am 11 years old. I know 5 languages which include English, Spanish, Tamil, and HTMl, and JavaScript. </p>
-<p style-"font-size:3em ;"> The History of my website!</p>
+<p style="font-size:3em ;"> The History of my website!</p>
     <p style="font-size:1em ;"> First I used a tabular inference </p>
     <ul class="nav nav-tabs" id="myTab" role="tablist">
   <li class="nav-item" role="presentation">
