--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 </ul>
 <div class="tab-content" id="myTabContent">
   <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">This is some content for the sake of this example</div>
-  <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">This is some content for the sake of this example</div>
-  <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">This is some content for the sake of this example</div>
+  <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">Now that you have reviewed the Home tab, You have now reached the Profile Tab!</div>
+  <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">Not Gonna Lie, If you see this you are either tryna hack me or learn about me. Didn't you learn enough?</div>
 </div>
     
 
