--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">Now that you have reviewed the Home tab, You have now reached the Profile Tab!</div>
   <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">Not Gonna Lie, If you see this you are either tryna hack me or learn about me. Didn't you learn enough?</div>
 </div>
+    <p style="font-size:1em ;"> Now that you have seen my "amazing "
     
 
     <!-- Optional JavaScript; choose one of the two! -->
