--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p style="font-size:1em ;"> The easiest and most boring thing is to make button. </p>
     <button onclick="alert('You clicked me!')">Click me!</button>
     <p style="font-size:1em ;"> Here's all the code you have to write </p>
-    javascript:document.write("<button onclick="alert('You clicked me!')">Click me!</button>")
+    javascript:document.write("<button onclick="alert('<button onclick="alert('You clicked me!')">Click me!</button>')">Click me!</button>")
     
 
     <!-- Optional JavaScript; choose one of the two! -->
