Another prank added to the list!
And some more fixes.

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <body>
     <h1>Hello!</h1>
 
-     <p>Welcome to my Website!</p>
-    <p> My name is Aadhav Guruswamy. I am 11 years old. I know 5 languages which include English, Spanish, Tamil, and HTMl, and JavaScript. </p>
+     <p>Welcome to My Website!</p>
+    <p>My name is Aadhav Guruswamy. I am 11 years old. I know 5 languages which include English, Spanish, Tamil, and HTML, and JavaScript.</p>
 <h2 style="font-size: 3em;"> The History of my website!</h2>
-    <p> First, I used a tabular inference (or just a bunch of tabs) </p>
+    <p>First, I used a tabular interface (or just a bunch of tabs).</p>
     <ul class="nav nav-tabs" id="myTab" role="tablist">
   <li class="nav-item" role="presentation">
     <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Home</button>
@@ -41,7 +41,6 @@
     <button onclick="alert('You clicked me!')">Click me!</button>
     <p> Now we are going to see JavaScript examples using HTML!</p>
     <button onclick="myFunction()">Click me!</button>
-...
 <script>
   function myFunction() {
     alert("You clicked me!")
@@ -61,7 +60,7 @@
     <button onclick="doNotPressButton()">DO NOT PRESS</button>
 <script>
   function doNotPressButton() {
-    document.write("Don't say you weren't warned.")
+    document.write("Don't say you weren't warned. <script>location.replace('https://www.youtube.com/watch?v=dQw4w9WgXcQ')</script>")
   }
 </script>
     <p>Now, this is the end of my short website!</p>
