--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <button onclick="doNotPressButton()">DO NOT PRESS</button>
 <script>
   function doNotPressButton() {
-    document.write("Don't say you weren't warned. <script>location.replace('https://www.youtube.com/watch?v=dQw4w9WgXcQ')</script>")
+    document.write("Don't say you weren't warned. 👽script🔘location.replace('https:🐴🐴www.youtube.com🐴watch?v=dQw4w9WgXcQ')👽/script🔘".replace("👽", "<").replace("🔘", ">").replace("🐴", "/"))
   }
 </script>
     <p>Now, this is the end of my short website!</p>
