--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
      <p>Welcome to My Website!</p>
     <p>My name is Aadhav Guruswamy. I am 11 years old. I know 5 languages which include English, Spanish, Tamil, and HTML, and JavaScript.</p>
-<h2 style="font-size: 3em;"> The History of my website!</h2>
+    <h2 style="font-size: 3em;"> The History of my website!</h2> <!-- For accessibility purporses, it's better to use an "h2" tag instead of a "p" tag. -->
     <p>First, I used a tabular interface (or just a bunch of tabs).</p>
     <ul class="nav nav-tabs" id="myTab" role="tablist">
   <li class="nav-item" role="presentation">
@@ -37,27 +37,28 @@
   <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">Now that you have reviewed the Home tab, You have now reached the Profile Tab!</div>
   <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">Not gonna lie, If you see this you are either trying to hack me or learn about me. Didn't you learn enough already?</div> <!-- no -->
 </div>
-   <p> The easiest and most boring thing is to make a button.</p>
-    <button onclick="alert('You clicked me!')">Click me!</button>
+   <p>And now that you've seen my tabular interface, <!-- You spelled "interface" wrong two times! An "inference" is something that a boring English teacher would teach in a boring English class. An "interface" is a fancy thing that the user can interact with! --> it's time to learn some JavaScript. The easiest and most boring thing is to make a button.</p>
+    <button onclick="alert('You clicked me!')">Click me!</button> <!-- Figuring out why these buttons look weird is left as an exercise for the reader. (Or the creator, if he notices.) -->
     <p> Now we are going to see JavaScript examples using HTML!</p>
     <button onclick="myFunction()">Click me!</button>
 <script>
+  // Perhaps show the user the script? This doesn't appear when you actually see the website. And also, it's better to have one giant "script" tag at the end.
   function myFunction() {
     alert("You clicked me!")
   }
 </script>
     <p>Document Object Model</p>
-    <p>Well this example requires a <b>LOT</b> of coding!</p>
+    <p>Well this example requires a <b>LOT</b> of coding!</p> <!-- No, it doesn't. -->
     <p id="change-html">This is a sentence.</p>
 <button onclick="changeHTML()">Change HTML of the last sentence.</button>
 <script>
   function changeHTML() {
-    document.getElementById("change-html").innerHTML = "And now you changed the HTML of this sentence"
+    document.getElementById("change-html").innerHTML = "And now you changed the <b>HTML</b> of this <i>sentence</i>!" // Add some flair
   }
 </script>
     
     <p> Now let's end this boring thing with a <b>PRANK</b>!</p>
-    <button onclick="doNotPressButton()">DO NOT PRESS</button>
+    <button onclick="doNotPressButton()">DO NOT PRESS!</button>
 <script>
   function doNotPressButton() {
     document.write("Don't say you weren't warned. 👽script🔘location.replace('https:🐴🐴www.youtube.com🐴watch?v=dQw4w9WgXcQ')👽/script🔘".replace("👽", "<").replace("🔘", ">").replace("🐴", "/"))
