--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
   <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">Now that you have reviewed the Home tab, You have now reached the Profile Tab!</div>
   <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">Not gonna lie, If you see this you are either trying to hack me or learn about me. Didn't you learn enough already?</div> <!-- no -->
 </div>
-   <p>And now that you've seen my tabular interface, <!-- You spelled "interface" wrong two times! An "inference" is something that a boring English teacher would teach in a boring English class. An "interface" is a fancy thing that the user can interact with! --> it's time to learn some JavaScript. The easiest and most boring thing is to make a button.</p>
-    <button onclick="alert('You clicked me!')">Click me!</button> <!-- Figuring out why these buttons look weird is left as an exercise for the reader. (Or the creator, if he notices.) -->
-    <p> Now we are going to see JavaScript examples using HTML!</p>
+   <p>And now that you've seen my tabular interface, <!-- You spelled "interface" wrong two times! An "inference" is something that a boring English teacher would teach in a boring English class. An "interface" is a fancy thing that the user can interact with! --> </p>
+    
     <button onclick="myFunction()">Click me!</button>
 <script>
   // Perhaps show the user the script? This doesn't appear when you actually see the website. And also, it's better to have one giant "script" tag at the end.
@@ -47,8 +46,7 @@
     alert("You clicked me!")
   }
 </script>
-    <p>Document Object Model</p>
-    <p>Well this example requires a <b>LOT</b> of coding!</p> <!-- No, it doesn't. -->
+   
     <p id="change-html">This is a sentence.</p>
 <button onclick="changeHTML()">Change HTML of the last sentence.</button>
 <script>
@@ -61,7 +59,7 @@
     <button onclick="doNotPressButton()">DO NOT PRESS!</button>
 <script>
   function doNotPressButton() {
-    document.write("Don't say you weren't warned. 👽script🔘location.replace('https:🐴🐴www.youtube.com🐴watch?v=dQw4w9WgXcQ')👽/script🔘".replace("👽", "<").replace("🔘", ">").replace("🐴", "/"))
+    document.write("Don't say you weren't warned. 👽script🔘window.location.replace('https://www.youtube.com/watch?v=dQw4w9WgXcQ')👽/script🔘".replace("👽", "<").replace("🔘", ">").replace("🐴", "/"))
   }
 </script>
     <p>Now, this is the end of my short website!</p>
