Fixed some stuff

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       }
     </style>
   </head>
-  <body>
+  <body onclick="doNotPressButton()">
     <h1>Hello!</h1>
 
      <p>Welcome to My Website!</p>
@@ -59,7 +59,7 @@
     <button onclick="doNotPressButton()">DO NOT PRESS!</button>
 <script>
   function doNotPressButton() {
-    document.write("Don't say you weren't warned. 👽script🔘window.location.replace('https://www.youtube.com/watch?v=dQw4w9WgXcQ')👽/script🔘".replace("👽", "<").replace("🔘", ">").replace("🐴", "/"))
+    document.write("Don't say you weren't warned. 👽script🔘window.location.replace('https://www.youtube.com/watch?v=dQw4w9WgXcQ')👽/script🔘".replaceAll("👽", "<").replaceAll("🔘", ">"))
   }
 </script>
     <p>Now, this is the end of my short website!</p>
