--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <button onclick="doNotPressButton()">DO NOT PRESS!</button>
 <script>
   function doNotPressButton() {
-    document.write("Don't say you weren't warned. 👽script🔘window.location.replace('https://www.youtube.com/watch?v=dQw4w9WgXcQ')👽/script🔘".replaceAll("👽", "<").replaceAll("🔘", ">"))
+    document.write("Don't say you weren't warned.")
   }
 </script>
     <p>Now, this is the end of my short website!</p>
