--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
     <h1 style="font-size:2em ;"> About Me </h1>
     <h1 style="font-size:1em ;"> My name is Aadhav Guruswamy and I am 11 years old. I know 5 languages that include: Tamil,English,Spanish,HTML, and JavaScript </h1>
     <h1 style="font-size:2em ;"> Here's a surprise for you! </h1>
-    <button onclick="alert('You Clicked Me!')">Click Me!</button>
-    &nbsp;
-    &nbsp;
-    &nbsp;
-    &nbsp;
-    &nbsp;
-    <h1 style="font-size:1em ;"> And Here is a game that I made</h1>
+    <button onclick="alert('You Clicked Me!')">Click Me!</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;v&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+   
+    <h1 style="font-size:1em ;"> And Here is a game that I made. Juct Copy The Link which is down here:</h1>
     <h1 style="font-size:1em ;">file:///home/chronos/u-7ce57aaa5ff512f11b03bd3e13f962af77a938b6/MyFiles/Pong/Pong.html</h1>
+    <h1 style="font-size:1em ;"> The code for it is here: </h1>
+    <h1 style="font-size:1em ;">file:///home/chronos/u-7ce57aaa5ff512f11b03bd3e13f962af77a938b6/MyFiles/Pong/PongCode.txt</h1>
     
     <!-- Optional JavaScript; choose one of the two! -->
 
