--- a/index.html
+++ b/index.html
@@ -9,29 +9,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>Aadhav Guruswamy's Website</title>
+
+    <style>
+      p {
+        font-size: 1em;
+      }
+      
+      h2 {
+        font-size: 2em;
+      } 
+    </style>
   </head>
   <body>
     <h1>Hello!</h1>
-    <h1 sytle="font-size:1em ;"> Hello, and welcome to my website this is the website of an 11 year old so don't expect too much. </h1>
-    <h1 style="font-size:2em ;"> About Me </h1>
-    <h1 style="font-size:1em ;"> My name is Aadhav Guruswamy and I am 11 years old. I know 5 languages that include: Tamil,English,Spanish,HTML, and JavaScript </h1>
-    <h1 style="font-size:2em ;"> Here's a surprise for you! </h1>
+    <p>Hello, and welcome to my website this is the website of an 11 year old so don't expect too much.</p>
+    <h2>About Me</h2>
+    <p>My name is Aadhav Guruswamy and I am 11 years old. I know 5 languages that include: Tamil, English, Spanish, HTML, and JavaScript.</p>
+    <h2>Here's a surprise for you!</h2>
     <button onclick="alert('You Clicked Me!')">Click Me!</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;v&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
    
-    <h1 style="font-size:1em ;"> And Here is a game that I made. Juct Copy The Link which is down here:</h1>
-    <h1 style="font-size:1em ;">file:///home/chronos/u-7ce57aaa5ff512f11b03bd3e13f962af77a938b6/MyFiles/Pong/Pong.html</h1>
-    <h1 style="font-size:1em ;"> The code for it is here: </h1>
-    <h1 style="font-size:1em ;">file:///home/chronos/u-7ce57aaa5ff512f11b03bd3e13f962af77a938b6/MyFiles/Pong/PongCode.txt</h1>
+    <p> And here is a game that I made. Juct copy the link which is down here:</p>
+    <p><code>file:///home/chronos/u-7ce57aaa5ff512f11b03bd3e13f962af77a938b6/MyFiles/Pong/Pong.html</code></p>
+    <p>The code for it is here:</p>
+    <p><code>file:///home/chronos/u-7ce57aaa5ff512f11b03bd3e13f962af77a938b6/MyFiles/Pong/PongCode.txt</code></p>
     
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
   </body>
 </html>
