--- a/index.html
+++ b/index.html
@@ -42,11 +42,14 @@ Anyways, welcome to my website.
     <h2><span style="color:#FF0000">H</span><span style="color:#FF4600">e</span><span style="color:#FF8B00">r</span><span style="color:#FFD100">e</span><span style="color:#E8FF00">'</span><span style="color:#A2FF00">s</span> <span style="color:#5DFF00">a</span> <span style="color:#17FF00">s</span><span style="color:#00FF2E">u</span><span style="color:#00FF74">r</span><span style="color:#00FFB9">p</span><span style="color:#00FFFF">r</span><span style="color:#00B9FF">i</span><span style="color:#0074FF">s</span><span style="color:#002EFF">e</span> <span style="color:#1700FF">f</span><span style="color:#5D00FF">o</span><span style="color:#A200FF">r</span> <span style="color:#E800FF">y</span><span style="color:#FF00D1">o</span><span style="color:#FF008B">u</span><span style="color:#FF0046">!</span></h2>
     <button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;v&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
    
-    <p> And here is a game that I made. Juct copy the link which is down here:</p>
+    <p> And here is a game that I made. Just copy the link which is down here:</p>
     <p><code>file:///home/chronos/u-7ce57aaa5ff512f11b03bd3e13f962af77a938b6/MyFiles/Pong/Pong.html</code></p>
     <p>The code for it is here:</p>
     <p><code>file:///home/chronos/u-7ce57aaa5ff512f11b03bd3e13f962af77a938b6/MyFiles/Pong/PongCode.txt</code></p>
-    
+    <h1 style="font-size:1em ;"> If you liked Pong, the creators are Bruno Zhong and I. (Well I just published it and made it public for him and ine comes with a hackers console too) </h1>
+    <h3> My Projects</h3>
+<h3 style="font-size:1em ;"> My first thing is My shop that I use to sell useless things. </h3>
+    <p><code>https://codepen.io/Jotaro-Kujo-the-lessful/pen/LYwNeZL?editors=1000</code></p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script defer>
       // Source: https://github.com/Brunozhon/Brunozhon.github.io/blob/main/index.html#L66-L90
