--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Anyways, welcome to my website.
     <p><code>file:///home/chronos/u-7ce57aaa5ff512f11b03bd3e13f962af77a938b6/MyFiles/Pong/Pong.html</code></p>
     <p>The code for it is here:</p>
     <p><code>file:///home/chronos/u-7ce57aaa5ff512f11b03bd3e13f962af77a938b6/MyFiles/Pong/PongCode.txt</code></p>
-    <h1 style="font-size:1em ;"> If you liked Pong, the creators are Bruno Zhong and I. (Well I just published it and made it public for him and ine comes with a hackers console too) </h1>
+    <h1 style="font-size:1em ;"> If you liked Pong, the creator is Bruno Zhong and I am the publisher. </h1>
     <h3> My Projects</h3>
 <h3 style="font-size:1em ;"> My first thing is My shop that I use to sell useless things. </h3>
     <p><code>https://codepen.io/Jotaro-Kujo-the-lessful/pen/LYwNeZL?editors=1000</code></p>
