--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@ Anyways, welcome to my website.
     <h3> My Projects</h3>
 <h3 style="font-size:1em ;"> My first thing is My shop that I use to sell useless things. </h3>
     <p><code>https://codepen.io/Jotaro-Kujo-the-lessful/pen/LYwNeZL?editors=1000</code></p>
+    <h3 style="font-size:1em ;"> The next item is just cool to watch </h3>
+    <p><code>https://codepen.io/Jotaro-Kujo-the-lessful/pen/wvVogLe</code></p>
+    <h3 style="font-size:1em ;"> And the last thing is a Hack Panel (shhhhh!) </h3>
+    <p><code>https://codepen.io/Jotaro-Kujo-the-lessful/pen/gOVLmoG?editors=1100</code></p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script defer>
       // Source: https://github.com/Brunozhon/Brunozhon.github.io/blob/main/index.html#L66-L90
