--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Anyways, welcome to my website.
     </pre>
 
     
-    <p>Hello, and welcome to my website this is the website of an 11 year old so don't expect too much.</p>
+    <p>Hello, and welcome to my website. This is the website of an 11 year old, so don't expect too much.</p>
     <h2>About Me</h2>
     <p>My name is Aadhav Guruswamy and I am 11 years old. I know 5 languages that include: Tamil, English, Spanish, HTML, and JavaScript.</p>
     <!-- Argubly more of a suprise if it has rainbow text! -->
