--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@ Anyways, welcome to my website.
     <h3 style="font-size:1em ;"> The next item is just cool to watch </h3>
     <p><code>https://codepen.io/Jotaro-Kujo-the-lessful/pen/wvVogLe</code></p>
     <h3 style="font-size:1em ;"> And the last thing is a Hack Panel (shhhhh!) </h3>
+    <h5> Hey, wanna learn some coding? These are some great reasources! (I am self thought)</h5>
+    <p><code>https://www.w3schools.com</code></p>
     <p><code>https://codepen.io/Jotaro-Kujo-the-lessful/pen/gOVLmoG?editors=1100</code></p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script defer>
