Fixed a few bugs
You need to learn to group things in classes!

--- a/index.html
+++ b/index.html
@@ -24,15 +24,11 @@
     <h1>Hello!</h1>
 
     <!-- Source: https://github.com/Brunozhon/Brunozhon.github.io/blob/main/index.html#L27-L35 -->
-    <pre id="welcome">
-      <noscript>
-Please enable JavaScript.
+    <pre id="welcome">Please enable JavaScript.
 (•_•)
 ( •_•)>⌐■-■
 (⌐■_■)
-Anyways, welcome to my website.
-      </noscript>
-    </pre>
+Anyways, welcome to my website.</pre>
 
     
     <p>Hello, and welcome to my website. This is the website of an 11 year old, so don't expect too much.</p>
@@ -47,39 +43,39 @@ Anyways, welcome to my website.
     <h3 style="font-size:1em ;"> The next item is just cool to watch </h3>
     <p><code>https://codepen.io/Jotaro-Kujo-the-lessful/pen/wvVogLe</code></p>
     <h3 style="font-size:1em ;"> And the last thing is a Hack Panel (shhhhh!) </h3>
-    <h5> Hey, wanna learn some coding? This is a great resource! (I am self thought)</h5>
+    <h5> Hey, wanna learn some coding? This is a great resource! (I am self taught)</h5>
     <p><code>https://www.w3schools.com</code></p>
     <h5 style="font-size:1em ;"> Or, you can learn some coding here! </h5>
     <h5 sytle="font-size:1em ;"> We're gonna learn how to make a button like I posted earlier.</h5>
     <button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button>
    
     <h5 style="font-size:1em ;"> Here's how you do it</h5>
-    <p><code>button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button> </code></p>\
+    <p><code>&lt;button onclick="alert('You Clicked Me!')" class="btn btn-primary"&gt;Click Me!&lt;/button&gt; </code></p>
     <h5 style="font-size:2em ;"> Well, thats it for now. Thank you for visiting! </h5>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script>
       var asciiArt = [
         `|‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾|
-| WELCOME TO MY WEBSITE! |
+| GET OUT OF MY WEBSITE! |
 |________________________|
 (\\__/) || 
 (•ㅅ•) || 
 /    づ`,
-        `Welcome to — oops, sorry…
+        `Get out of — oops, sorry…
 (•_•)
 ( •_•)>⌐■-■
 (⌐■_■)
-Now, welcome to my website!`,
+Now, get out of my website!`,
         `(•_•)
-<)   )╯WELCOME
+<)   )╯GET OUT
  /    \\ 
   (•_•)
- \\(   (> TO MY
+ \\(   (> OF MY
   /    \\
  (•_•)
 <)   )╯WEBSITE
  /    \\`
       ]
-      document.getElementById("welcome").innerHTML = asciiArt[Math.floor(Math.random() * 3)]
     </script>
   </body>
 </html>
