--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@ Anyways, welcome to my website.</pre>
     <script>
       var asciiArt = [
         `|‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾|
-| GET OUT OF MY WEBSITE! |
+| WELCOME TO MY WEBSITE |
 |________________________|
 (\\__/) || 
 (•ㅅ•) || 
 /    づ`,
-        `Get out of — oops, sorry…
+        `Welcome to my — oops, sorry…
 (•_•)
 ( •_•)>⌐■-■
 (⌐■_■)
-Now, get out of my website!`,
+Now, welcome to my  website!`,
         `(•_•)
-<)   )╯GET OUT
+<)   )╯WELCOME
  /    \\ 
   (•_•)
- \\(   (> OF MY
+ \\(   (> TO MY
   /    \\
  (•_•)
 <)   )╯WEBSITE
