--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 (•_•)
 ( •_•)>⌐■-■
 (⌐■_■)
-Anyways, welcome to my website.</pre>
+Sorry about that. Just needed to enable JavaScript and become cool. Anyway, welcome to my website.</pre>
 
     
     <p>Hello, and welcome to my website. This is the website of an 11 year old, so don't expect too much.</p>
