--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
   <body>
     <h1>Hello!</h1>
 
-    <!-- Source: https://github.com/Brunozhon/Brunozhon.github.io/blob/main/index.html#L27-L35 -->
     <pre id="welcome">Please enable JavaScript.
 (•_•)
 ( •_•)>⌐■-■
@@ -46,7 +45,7 @@ Sorry about that. Just needed to enable JavaScript and become cool. Anyways, wel
     <h3 style="font-size:1em ;"> The next item is just cool to watch </h3>
     <p><code>https://codepen.io/Jotaro-Kujo-the-lessful/full/wvVogLe</code></p>
     <h3 style="font-size:1em ;"> And here's a game that I made which is pretty much pong, but in the web </h3>
-    <p><a href="https://brunozhon.github.io/webPong/">Play some pong!</a></p>
+    <p><a href="file:///home/chronos/u-7ce57aaa5ff512f11b03bd3e13f962af77a938b6/MyFiles/Pong/WebPong.html">Play some pong!</a></p>
     <h5> Hey, wanna learn some coding? These are great resources! (I am self thought)</h5>
     <p><code>https://www.w3schools.com</code></p>
     <p><code>https://www.freecodecamp.org/</code></p>
