--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Sorry about that. Just needed to enable JavaScript and become cool. Anyways, wel
     <h1 style="font-size:2em ;"> Here's some of my coding projects! </h1>
 <h3 style="font-size:1em ;"> My first thing is My shop that I use to sell useless things. </h3>
     <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/LYwNeZL">Click On This!</a></p>
-    <h3 style="font-size:1em ;"> And here is a game that I made! (you use w and s to move and the arrow keys)</h3>
+    <h3 style="font-size:1em ;"> And here is a game that I made! (you use w and s to move and the arrow keys and I reccomend to full screen it)</h3>
     <p><a href="https://eternalxlks.github.io/eternalxlkswebpong.github.io/">Click On This!</a></p>
     <h3 style="font-size:1em ;"> The next item is just cool to watch </h3>
     <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/zYgjrwM">Click On This!</a></p>
